[package]
name = "ticktick-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
base64 = "0.22.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
hex = "0.4.3"
open = "5.3.2"
rand = "0.8.5"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "gzip", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"
